fix: flex-wrap pro to in-evidence ul

--- a/style.css
+++ b/style.css
@@ -342,6 +342,7 @@ main .in-evidence{
 }
 .in-evidence ul{
     padding-top: 110px;
+    flex-wrap: wrap;
 }
 .in-evidence .border-green{
     border-bottom: 1px;
@@ -380,9 +381,6 @@ main .in-evidence{
     
 }
 @media screen and (max-width: 700px){
-    .in-evidence ul{
-        flex-wrap: wrap;
-    }
     .card-6{
         width: 50%;
     }
